[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memx"
version = "0.1.0"
description = "A minimal, high-accuracy memory system for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["memory", "llm", "rag", "faiss", "ai", "chatbot", "agent"]

dependencies = [
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn", "pydantic"]
local = ["sentence-transformers>=2.7.0", "faiss-cpu>=1.8.0"]
openai = ["openai>=1.30.0"]
anthropic = ["anthropic>=0.30.0"]
dev = ["pytest>=8.0", "black", "ruff"]
bench = ["pandas>=2.0", "openai>=1.30.0", "python-dotenv>=1.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["memx*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
